@@ -1,0 +1,3 @@
+package URI::cockroachdb;
+use base 'URI::cockroach';
+our $VERSION = '0.20';
